--- a/ansible/roles/concertim_common/templates/secrets.env
+++ b/ansible/roles/concertim_common/templates/secrets.env
@@ -1,3 +1,4 @@
 POSTGRES_PASSWORD={{db_password}}
 JWT_SECRET={{jwt_secret}}
 RAILS_MASTER_KEY={{rails_master_key}}
+REDIS_PASSWORD={{redis_password}}
