--- a/contrib/dev/vagrant/Vagrantfile
+++ b/contrib/dev/vagrant/Vagrantfile
@@ -60,7 +60,7 @@ Vagrant.configure("2") do |config|
         # Visualiser over HTTPS.
         v.vm.network "forwarded_port", guest:  7443, host: 9443 + idx + 1, host_ip: '127.0.0.1'
         # Killbill over HTTP.
-        v.vm.network "forwarded_port", guest: 49090, host: 9090,           host_ip: '127.0.0.1'
+        v.vm.network "forwarded_port", guest: 49090, host: 9090 + idx + 1, host_ip: '127.0.0.1'
       else
         # Visualiser over HTTP.
         v.vm.network "forwarded_port", guest:  80, host: 9080 + idx + 1, host_ip: '127.0.0.1'
