--- a/ansible/etc/globals.yaml
+++ b/ansible/etc/globals.yaml
@@ -53,6 +53,9 @@ visualisation_app_port: 7000
 # The interface that the proxy service should listen to HTTPS requests on.
 # Use 0.0.0.0 to listen on all interfaces.
 visualisation_app_interface: 127.0.0.1
+# The hosts that visualiser's action cable (websockets) should allow requests from.
+# If multiple, these should be separated by a comma.
+action_cable_allowed_origins: https://localhost:9444,https://127.0.0.1:9444
 
 # The port that the redis service should listen to HTTP requests on.
 redis_port: 46379
