--- a/ansible/etc/globals.yaml
+++ b/ansible/etc/globals.yaml
@@ -53,10 +53,10 @@ visualisation_app_port: 7000
 # The interface that the proxy service should listen to HTTPS requests on.
 # Use 0.0.0.0 to listen on all interfaces.
 visualisation_app_interface: 127.0.0.1
-# The hosts that visualiser's action cable (websockets) should allow requests from.
-# If multiple, these should be separated by a comma.
-# Comment this line out to use the hostname detected by ansible.
-action_cable_allowed_origins: https://localhost:9444,https://127.0.0.1:9444
+# The hostname(s) that will be used to access concertim (i.e. the hostname that users type into their browser).
+# If not set, it will default to the fully qualified hostname of the machine concertim is installed on.
+#access_hostnames:
+#  - myhostname.mydomain
 
 # The port that the redis service should listen to HTTP requests on.
 redis_port: 46379
