Pin postgres to version 16

--- a/ansible/templates/docker-compose.yml
+++ b/ansible/templates/docker-compose.yml
@@ -80,7 +80,7 @@ services:
       - "visualisation:{{visualisation_app_ip}}"
 
   db:
-    image: postgres
+    image: postgres:16-bookworm
     restart: always
     user: postgres
     volumes:
