Support forcing use of latest docker tag
During development we want to use the `latest` docker image tag when
we've checked out the `main` commitish and it just so happens to have
been tagged as a release.

--- a/ansible/roles/cluster_builder/tasks/main.yaml
+++ b/ansible/roles/cluster_builder/tasks/main.yaml
@@ -71,6 +71,7 @@
   vars:
     component: cluster_builder
     install_dir: "{{cluster_builder.install_dir}}"
+    force_docker_latest: "{{cluster_builder.source.commitish == 'main'}}"
   import_tasks: gather_git_and_docker_facts.yaml
 
 - name: Build docker image
