--- a/ansible/roles/visualisation_app/tasks/deploy.yaml
+++ b/ansible/roles/visualisation_app/tasks/deploy.yaml
@@ -21,6 +21,7 @@
   vars:
     component: visualisation_app
     install_dir: "{{visualisation_app.install_dir}}"
+    force_docker_latest: "{{metric_reporting_daemon.source.commitish == 'main'}}"
   import_tasks: gather_git_and_docker_facts.yaml
 
 - name: Build docker image
