Don't enable all cluster types
The sahara and magnum based cluster types should not be enabled by
default.  At this point they are really examples that are only useful
for demonstrating that we have some level of support for sahara and
magnum.

--- a/ansible/roles/cluster_builder/tasks/main.yaml
+++ b/ansible/roles/cluster_builder/tasks/main.yaml
@@ -55,11 +55,17 @@
       register: available_types
 
     - name: Enable all available types
+      vars:
+        disabled_cluster_types:
+          - big-data-analysis
+          - big-data-analysis-direct
+          - k8s-web-hosting
       ansible.builtin.file:
         src: "../cluster-types-available/{{item.path | dirname | basename}}"
         dest: "{{enabled_dir}}/{{item.path | dirname | basename}}"
         state: link
       loop: "{{ available_types.files }}"
+      when: "item.path | dirname | basename not in disabled_cluster_types"
 
 - name: Set git checkout and docker image facts
   vars:
