--- a/ansible/roles/metric_reporting_daemon/templates/config.yml
+++ b/ansible/roles/metric_reporting_daemon/templates/config.yml
@@ -76,4 +76,5 @@ rrd:
   step: 15s
 
 log_level: info
+log_file: /app/log/metric-reporting-daemon.log
 shared_secret_file: "/opt/concertim/etc/secret"
