--- a/ansible/roles/cluster_builder/tasks/main.yaml
+++ b/ansible/roles/cluster_builder/tasks/main.yaml
@@ -16,6 +16,19 @@
   ansible.builtin.command:
     cmd: git config --global --add safe.directory "{{cluster_builder.install_dir}}"
 
+- name: Create directories
+  ansible.builtin.file:
+    path: "{{ item.path }}"
+    owner: "{{ item.owner }}"
+    group: "{{ item.group }}"
+    mode: "{{ item.mode }}"
+    state: directory
+  loop:
+    - path: "{{ct_log_dir}}/cluster-builder"
+      owner: root
+      group: root
+      mode: "755"
+
 - name: Copy cluster type definitions
   vars:
     available_dir: "{{ct_cluster_builder_share_dir}}/cluster-types-available"
